instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:1: error: not found: value n
n = 18
^InstructionsDrawG:3: error: not found: value n
for(i <- 0 to n){
              ^