instructions.InstructionsDrawG.scala.code
n = 18

for(i <- 0 to n){
  
  if(i == 0){
   
    baisseBrosse()
    
  }
  
  if(i%4 == 0 || i == 14 || i == 18){
    
    gauche()
    
  }
  
  else if(i == 15 || 17){
    
    droite();
    
    if(i == 15){
      
      leveBrosse()
      
    }
    
  }
  
  avance()
  
}